standard-package/contour/gatewayclass.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: contourgateway
spec:
  controllerName: projectcontour.io/gateway-controller
